--- a/charts/jupyter-lab/Chart.yaml
+++ b/charts/jupyter-lab/Chart.yaml
@@ -1,5 +1,8 @@
 apiVersion: v1
 description: Jupyter Lab with Auth0 authentication proxy
 name: jupyter-lab
-version: 1.0.0
-appVersion: "JupyterLab: 2.2.9, Python: 3.8.6"
+version: 2.0.0
+appVersion: "JupyterLab: 2.2.9, Python: 3.8.6, Spark: 3.0.1"
+maintainers:
+  - name: ministryofjustice
+icon: https://avatars3.githubusercontent.com/u/8361145?s=200&v=4?sanitize=true
