--- a/charts/jupyter-lab/templates/service-account.yaml
+++ b/charts/jupyter-lab/templates/service-account.yaml
@@ -3,3 +3,6 @@ kind: ServiceAccount
 metadata:
   name: {{ .Values.Username }}-jupyter
   namespace: {{ .Release.Namespace }}
+  labels:
+    app: "{{ .Chart.Name }}"
+    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
