[ANPL-239] Change config-map name for RStudio

--- a/charts/rstudio/templates/deployment.yml
+++ b/charts/rstudio/templates/deployment.yml
@@ -139,7 +139,7 @@ spec:
       volumes:
         - name: configmap
           configMap:
-            name: {{ .Release.Name }}
+            name: "chown-home"
             defaultMode: 0500
         - name: home
           persistentVolumeClaim:
