--- a/charts/rstudio/templates/secrets.yml
+++ b/charts/rstudio/templates/secrets.yml
@@ -7,11 +7,7 @@ metadata:
     app: "{{ .Chart.Name }}"
 type: Opaque
 data:
-  client_secret: {{ .Values.authProxy.auth0.clientSecret | b64enc | quote }}
-  client_id: {{ .Values.authProxy.auth0.clientId | b64enc | quote }}
-  domain: {{ .Values.authProxy.auth0.domain | b64enc | quote }}
-  app_host: {{ (include "host" .) | b64enc | quote }}
-  callback_url: {{ printf "https://%s/callback" (include "host" .) | b64enc | quote }}
-  cookie_secret: {{ .Values.authProxy.cookieSecret | b64enc | quote }}
-  secure_cookie_key: {{ .Values.rstudio.secureCookieKey | b64enc | quote }}
+  client_secret: {{ .Values.proxy.auth0.clientSecret | b64enc | quote }}
+  client_id: {{ .Values.proxy.auth0.clientId | b64enc | quote }}
+  domain: {{ .Values.proxy.auth0.domain | b64enc | quote }}
   aws_default_region: {{ .Values.aws.defaultRegion | b64enc | quote }}
