--- a/charts/rstudio/templates/service.yml
+++ b/charts/rstudio/templates/service.yml
@@ -13,4 +13,4 @@ spec:
     app: "{{ .Chart.Name }}"
   ports:
   - port: 80
-    targetPort: {{ .Values.authProxy.express.port }}
+    targetPort: {{ .Values.proxy.port }}
