--- a/charts/concourse-org-pipeline/templates/secrets.yaml
+++ b/charts/concourse-org-pipeline/templates/secrets.yaml
@@ -28,6 +28,7 @@ data:
   ip-102pf: {{ .Values.ipRanges.wifi102pf | b64enc | quote }}
   ip-digital: {{ .Values.ipRanges.mojDigitalWifiAndVpn | b64enc | quote }}
   ip-dom1: {{ .Values.ipRanges.dom1 | b64enc | quote }}
+  ip-mojo: {{ .Values.ipRanges.mojo | b64enc | quote }}
   ip-quantum: {{ .Values.ipRanges.quantum | b64enc | quote }}
   ip-turing: {{ .Values.ipRanges.alanTuringInstitute | b64enc | quote}}
   kubernetes-api-url: {{ .Values.kubernetes.apiUrl | b64enc | quote }}
