--- a/charts/concourse-org-pipeline/values.yaml
+++ b/charts/concourse-org-pipeline/values.yaml
@@ -49,12 +49,16 @@ githubOrgResource:
   image: quay.io/mojanalytics/github-org-resource
   tag: v0.6.0
 
+gitCrypt:
+  symmetricKey: ""
+
 ipRanges:
   wifi102pf: ""
   dom1: ""
   quantum: ""
   mojDigitalWifiAndVpn: ""
   alanTuringInstitute: ""
+  mojo: ""
 
 kubernetes:
   apiUrl: ""
