--- a/charts/rstudio/templates/deployment.yml
+++ b/charts/rstudio/templates/deployment.yml
@@ -62,7 +62,7 @@ spec:
                   name: {{ template "fullname" . }}
                   key: client_secret
             - name: APP_HOST
-              value: http://localhost
+              value: localhost
             - name: APP_PORT
               value: {{ quote .Values.rstudio.port }}
             - name: LOGOUT_URL
