ANPL-400 Add option to disable secret creation in control panel helm chart

--- a/charts/cpanel/values.yaml
+++ b/charts/cpanel/values.yaml
@@ -19,6 +19,9 @@ env:
   SAML_PROVIDER: ""
   SLACK_CHANNEL: ""
 
+secrets:
+  create: true  
+
 secretEnv:
   AIRFLOW_AUTH_CLIENT_DOMAIN: ""
   AIRFLOW_AUTH_CLIENT_ID: ""
