--- a/charts/cpanel/templates/secrets.yaml
+++ b/charts/cpanel/templates/secrets.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.secrets.create }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -36,3 +37,4 @@ data:
   {{ $key }}: {{ $value | b64enc | quote }}
   {{ end -}}
   REDIS_PASSWORD: {{ .Values.redis.password | b64enc | quote }}
+{{- end }}  
