--- a/charts/cpanel/Chart.yaml
+++ b/charts/cpanel/Chart.yaml
@@ -2,3 +2,5 @@ apiVersion: v1
 description: Analytics Platform Control Panel API webapp
 name: cpanel
 version: 3.2.0
+maintainers:
+  - name: ministryofjustice
