ANPL-400 Add option to disable secret creation in the control panel helm chart (#522)

--- a/charts/cpanel/values.yaml
+++ b/charts/cpanel/values.yaml
@@ -19,13 +19,16 @@ env:
   SAML_PROVIDER: ""
   SLACK_CHANNEL: ""
 
+secrets:
+  create: true
+
 secretEnv:
   AIRFLOW_AUTH_CLIENT_DOMAIN: ""
   AIRFLOW_AUTH_CLIENT_ID: ""
   AIRFLOW_AUTH_CLIENT_SECRET: ""
   AIRFLOW_FERNET_KEY: ""
   AIRFLOW_SECRET_KEY: ""
-  AWS_ACCOUNT_ID: "" # TODO: Remove once CP stops using it
+  AWS_ACCOUNT_ID: ""  # TODO: Remove once CP stops using it
   AWS_COMPUTE_ACCOUNT_ID: ""
   AWS_DATA_ACCOUNT_ID: ""
   ELASTICSEARCH_HOST: ""
@@ -66,7 +69,7 @@ worker:
   replicas: 10
 
 redis:
-  scheme: "rediss" # use SSL/TLS by default
+  scheme: "rediss"  # use SSL/TLS by default
   host: ""
   port: "6379"
   password: "controlpanel"
