ANPL-402 Deploy Control panel helm chart to Dev EKS cluster with flux
service account creation needs to be configurable to deploy cpanel in EKS

--- a/charts/cpanel/values.yaml
+++ b/charts/cpanel/values.yaml
@@ -54,6 +54,9 @@ secretEnv:
   SLACK_API_TOKEN: ""
   TOOLS_DOMAIN: ""
 
+service-accounts:
+  create: true  
+
 aws:
   defaultRegion: "eu-west-1"
   iamRole: ""
