--- a/charts/cpanel/templates/rbac-service-accounts.yaml
+++ b/charts/cpanel/templates/rbac-service-accounts.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.service-accounts.create }}
+{{- if .Values.serviceAccounts.create }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
