--- a/charts/cpanel/templates/rbac-service-accounts.yaml
+++ b/charts/cpanel/templates/rbac-service-accounts.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.serviceAccounts.create }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
@@ -19,3 +20,4 @@ metadata:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     app: "{{ .Chart.Name }}"
     component: "worker"
+{{- end }}
