ANPL-494 - Add the environment variable REDIRECT_DOMAIN, but default it to the current domain in Values

--- a/charts/rstudio/templates/deployment.yml
+++ b/charts/rstudio/templates/deployment.yml
@@ -69,6 +69,8 @@ spec:
               value: {{ quote .Values.proxy.auth0.logoutUrl }}
             - name: USERNAME
               value: {{ quote .Values.username }}
+            - name: REDIRECT_DOMAIN
+              value: {{ quote .Values.redirectdomain }}
           readinessProbe:
             httpGet:
               path: /nginx-health
