Init User -- Rename files called efs-persistent...... to nfs-persistent..... as they referred to softnas NFS Add files called efs-persistent..... which do pertain to EFS
Provision User
--
Rename pvc to match init user pvc so the same rstudio chart can be used for both

--- a/charts/init-user/templates/efs-persistent-volume-claim.yaml
+++ b/charts/init-user/templates/efs-persistent-volume-claim.yaml
@@ -4,9 +4,9 @@ metadata:
   name: efs-home
   namespace: user-{{ .Values.Username }}
 spec:
+  storageClassName: ""
   accessModes:
     - ReadWriteMany
-  storageClassName: efs-sc
   resources:
     requests:
-      storage: 5Gi
+      storage: 1Mi
