Init User -- Rename files called efs-persistent...... to nfs-persistent..... as they referred to softnas NFS Add files called efs-persistent..... which do pertain to EFS Default to dev EFS volume so no changes are needed to cpanel in order to get this working
Provision User
--
Rename pvc to match init user pvc so the same rstudio chart can be used for both

--- a/charts/init-user/values.yaml
+++ b/charts/init-user/values.yaml
@@ -7,3 +7,5 @@ OidcDomain: ""
 
 ubuntu:
   image: 593291632749.dkr.ecr.eu-west-1.amazonaws.com/ubuntu:16.04
+
+EFSHostname: "fs-577ede63.efs.eu-west-1.amazonaws.com"
