Add EKS annotations and EFS PVC for Jupyter lab

--- a/charts/jupyter-lab/templates/deployment.yaml
+++ b/charts/jupyter-lab/templates/deployment.yaml
@@ -113,8 +113,9 @@ spec:
             initialDelaySeconds: 15
             periodSeconds: 10
           volumeMounts:
-            - name: nfs-home
+            - name: efs-home
               mountPath: /home/jovyan
+              subPath: jupyter
           resources:
 {{ toYaml .Values.jupyter.resources | indent 12 }}
       volumes:
