Correct volume and claim name in Jupyter chart

--- a/charts/jupyter-lab/templates/deployment.yaml
+++ b/charts/jupyter-lab/templates/deployment.yaml
@@ -119,6 +119,6 @@ spec:
           resources:
 {{ toYaml .Values.jupyter.resources | indent 12 }}
       volumes:
-        - name: nfs-home
+        - name: efs-home
           persistentVolumeClaim:
-            claimName: nfs-home
+            claimName: efs-home
