Add EFS settings to CPanel chart

--- a/charts/cpanel/values.yaml
+++ b/charts/cpanel/values.yaml
@@ -37,6 +37,7 @@ secretEnv:
   JUPYTER_LAB_AUTH_CLIENT_DOMAIN: ""
   JUPYTER_LAB_AUTH_CLIENT_ID: ""
   JUPYTER_LAB_AUTH_CLIENT_SECRET: ""
+  EFS_HOSTNAME: ""
   NFS_HOSTNAME: ""
   OIDC_AUTH_EXTENSION_URL: ""
   OIDC_CLIENT_ID: ""
