--- a/charts/rstudio/templates/service-account.yaml
+++ b/charts/rstudio/templates/service-account.yaml
@@ -3,6 +3,8 @@ kind: ServiceAccount
 metadata:
   name: {{ .Values.username }}-rstudio
   namespace: {{ .Release.Namespace }}
+  annotations:
+    eks.amazonaws.com/role-arn: arn:aws:iam::{{ .Values.aws.accountID }}:role/{{ .Values.aws.iamRole }}
   labels:
     app: "{{ .Chart.Name }}"
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
