--- a/charts/init-user/values.yaml
+++ b/charts/init-user/values.yaml
@@ -8,4 +8,4 @@ OidcDomain: ""
 ubuntu:
   image: 593291632749.dkr.ecr.eu-west-1.amazonaws.com/ubuntu:16.04
 
-EFSHostname: ""
+EFSHostname: "fs-44e44970.efs.eu-west-1.amazonaws.com"
