--- a/charts/jupyter-lab/templates/deployment.yaml
+++ b/charts/jupyter-lab/templates/deployment.yaml
@@ -115,7 +115,7 @@ spec:
           volumeMounts:
             - name: efs-home
               mountPath: /home/jovyan
-              subPath: jupyter
+              subPath: {{.Values.username}}/jupyter
           resources:
 {{ toYaml .Values.jupyter.resources | indent 12 }}
       volumes:
