Allow to configure a .Renviron file in Rstudio

--- a/charts/rstudio/templates/configmap-renviron.yaml
+++ b/charts/rstudio/templates/configmap-renviron.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.rstudio.renviron.mount -}}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -10,3 +11,4 @@ data:
   .Renviron: |
     AWS_ROLE_ARN=arn:aws:iam::{{ .Values.aws.accountID }}:role/{{ .Values.aws.iamRole }}
     AWS_WEB_IDENTITY_TOKEN_FILE=/var/run/secrets/eks.amazonaws.com/serviceaccount/token
+{{- end -}}
