Turn off prompt for conda from reticulate so that it's NEVER prompted for EVER EVER AGAIN \o/

--- a/charts/rstudio/templates/deployment.yml
+++ b/charts/rstudio/templates/deployment.yml
@@ -96,6 +96,8 @@ spec:
           env:
             - name: USER
               value: "{{ .Values.username }}"
+            - name: RETICULATE_MINICONDA_ENABLED
+              value: "FALSE"
             - name: AWS_DEFAULT_REGION
               valueFrom:
                 secretKeyRef:
