--- a/.github/workflows/charts-lint-test-release.yaml
+++ b/.github/workflows/charts-lint-test-release.yaml
@@ -1,12 +1,18 @@
 ---
-name: "Charts: Lint and test"
+name: "Charts: Lint and test and publish"
 
 "on":
   pull_request:
     paths:
       - "charts/**"
       - "!charts/**/README.md"
-      - .github/workflows/charts-lint-test.yaml
+      - .github/workflows/charts-lint-test-release.yaml
+  push:
+    branches: [main]
+    paths:
+      - "charts/**"
+      - "!charts/**/README.md"
+      - .github/workflows/charts-lint-test-release.yaml
 
 jobs:
   lint:
@@ -47,6 +53,31 @@ jobs:
         id: lint
         run: ct lint --config .github/ct.yaml --excluded-charts "provision-user,init-user,cpanel,rstudio"
         if: steps.list-changed.outputs.changed == 'true' || steps.list-changed.outputs.common == 'true'
+
+  release:
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    runs-on: ubuntu-latest
+    needs: lint
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: Configure Git
+        run: |
+          git config user.name "$GITHUB_ACTOR"
+          git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
+
+      - name: Install Helm
+        uses: azure/setup-helm@v1
+        with:
+          version: v3.4.0
+
+      - name: Run chart-releaser
+        uses: helm/chart-releaser-action@v1.2.1
+        env:
+          CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
 
   # Don't install into KIND right now
   # Our charts or not currently compatible with newer version of Kubernetes
